--- a/smzdm_crawler/html/option.html
+++ b/smzdm_crawler/html/option.html
@@ -8,7 +8,7 @@
   </style>
   <script type="text/javascript" src="../js/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="../js/option.js"></script>
-    <script type="text/javascript" src="../js/background.js"></script>
+    <!-- <script type="text/javascript" src="../js/background.js"></script> -->
 </head>
 <body><table>
     <tr><td colspan="2">日期格式：2017-04-28 11:40</td></tr>
