fix td width issue

--- a/smzdm_crawler/popup.html
+++ b/smzdm_crawler/popup.html
@@ -13,6 +13,9 @@
 				text-align: left;
     			vertical-align: middle;
 			}
+			.mytd {
+				width: 80px;
+			}
 			img {
 				height: 100px;
 				width: 100px;
